BorrowLenses_PartialSandbox/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Internal Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on someone else</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <description>This is to use the status field to identify a Case within the Support life cycle.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on someone else</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>After_Case_Closed_Email_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds TRUE if Email is received from a customer after 30 days of case closure.</description>
        <inlineHelpText>Mark it if Email is received from a customer after 30 days of case closure.</inlineHelpText>
        <label>After Case Closed Email Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Type__c</fullName>
        <description>Describes whether Case was Closed Manually or Auto Closed.</description>
        <inlineHelpText>Shows whether Case was Closed Manually or Auto Closed.</inlineHelpText>
        <label>Case Closed Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Closed</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager_Email__c</fullName>
        <description>Holds the Email of Case Owner&apos;s Manager.</description>
        <inlineHelpText>Email of Case Owner&apos;s Manager.</inlineHelpText>
        <label>Case Owner Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <description>Holds the full name of the Manager of Case Owner</description>
        <formula>If( Owner:User.Manager.FirstName != NULL, Owner:User.Manager.FirstName + &apos; &apos;, &apos;&apos; ) + Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manager of Case Owner</inlineHelpText>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Contact_Number__c</fullName>
        <formula>IF(ISPICKVAL(Department__c,&quot;Photo&quot;),&quot;(844) 853-6737 x2&quot;,
  IF(ISPICKVAL(Department__c,&quot;Photo VIP&quot;),&quot;(844) 853-6737 x2&quot;,
   IF(ISPICKVAL(Department__c,&quot;Video&quot;),&quot;(844) 853-6737 x3&quot;,
    IF(ISPICKVAL(Department__c,&quot;Video VIP&quot;),&quot;(844) 853-6737 x2&quot;,
     IF(ISPICKVAL(Department__c,&quot;Verification&quot;),&quot;(844) 853-6737 x4&quot;,
      IF(ISPICKVAL(Department__c,&quot;Recovery&quot;),&quot;(844) 853-6737 x5&quot;,
       IF(ISPICKVAL(Department__c,&quot;Repair&quot;),&quot;(844) 853-6737&quot;,
	IF(ISPICKVAL(Department__c,&quot;Help&quot;),&quot;(844) 853-6737 x2&quot;, &quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Email__c</fullName>
        <formula>IF(ISPICKVAL(Department__c,&quot;Photo&quot;),&quot;photo@borrowlenses.com&quot;,
 IF(ISPICKVAL(Department__c,&quot;Photo VIP&quot;),&quot;Photovip@borrowlenses.com&quot;,
  IF(ISPICKVAL(Department__c,&quot;Video&quot;),&quot;video@borrowlenses.com&quot;,
   IF(ISPICKVAL(Department__c,&quot;Video VIP&quot;),&quot;videovip@borrowlenses.com&quot;,
    IF(ISPICKVAL(Department__c,&quot;Verification&quot;),&quot;verify@borrowlenses.com&quot;,
     IF(ISPICKVAL(Department__c,&quot;Recovery&quot;),&quot;recovery@borrowlenses.com&quot;,
      IF(ISPICKVAL(Department__c,&quot;Repair&quot;),&quot;repair@borrowlenses.com&quot;,
       IF(ISPICKVAL(Department__c,&quot;Help&quot;),&quot;help@borrowlenses.com&quot;, &quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>To differentiate the Cases based on the Queues to which they are assigned to.</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Help</fullName>
                </value>
                <value>
                    <fullName>Photo</fullName>
                </value>
                <value>
                    <fullName>Photo VIP</fullName>
                </value>
                <value>
                    <fullName>PO Accounts</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Video VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Emails will not be sent to customers if this is checked.</description>
        <inlineHelpText>Mark it If customer does not want to receive an email.</inlineHelpText>
        <label>Email Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for making sure First Response Milestone is completed when Agent change the Case Status to Waiting on Customer.</description>
        <label>First Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_To_Be_Escalated_In_Next_24_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Case status was waiting on customer and customer sends a reply back then status goes to in-progress and this field will be checked TRUE until agent performs some action on this case.</description>
        <inlineHelpText>This Case needs to be updated within 24 hours of customer&apos;s reply.</inlineHelpText>
        <label>Is This To Be Escalated In Next 24 Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Customer_Update_Date_Time__c</fullName>
        <label>Latest Customer Update Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Private_Attachment_Date_Time__c</fullName>
        <inlineHelpText>Holds the uploaded Date/Time of the latest attachment from its Private attachments.</inlineHelpText>
        <label>Latest Private Attachment Date/Time</label>
        <summarizedField>Attachment__c.Latest_Attachment_Uploaded_Date_Time__c</summarizedField>
        <summaryForeignKey>Attachment__c.Case__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Milestone_Violation_Warning_Time__c</fullName>
        <label>Milestone Violation/Warning Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Milestone_Violation_Warning__c</fullName>
        <label>Milestone Violation/Warning</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Private_Attachments__c</fullName>
        <description>Holds the sum of Number of Attachments field values from its Private Attachment records.</description>
        <inlineHelpText>Sum of the Number of Attachments field values from its Private Attachment records.</inlineHelpText>
        <label>Number of Private Attachments</label>
        <summarizedField>Attachment__c.Number_of_Attachments__c</summarizedField>
        <summaryForeignKey>Attachment__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Once_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked if Case has ever been in Escalated state.</description>
        <inlineHelpText>Holds TRUE if case was ever in Escalated.</inlineHelpText>
        <label>Once Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Email / Thanks / Out of Office</fullName>
                </value>
                <value>
                    <fullName>Internal Department Request (IDR)</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
                <value>
                    <fullName>Not Mine</fullName>
                </value>
                <value>
                    <fullName>Photo Equipment</fullName>
                </value>
                <value>
                    <fullName>PO Accounts</fullName>
                </value>
                <value>
                    <fullName>Repairs Team</fullName>
                </value>
                <value>
                    <fullName>Used Gear Refund - IDR</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Video Equipment</fullName>
                </value>
                <value>
                    <fullName>Yelp Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Violation_Warning_Time__c</fullName>
        <label>Resolution Violation/Warning Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Violation_Warning__c</fullName>
        <label>Resolution Violation/Warning</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>Case Subtype Dependant on Type</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Insurance</fullName>
                </value>
                <value>
                    <fullName>Accepted Payment Types / Methods</fullName>
                </value>
                <value>
                    <fullName>Added / Removed BL Rewards</fullName>
                </value>
                <value>
                    <fullName>Added / Removed Product</fullName>
                </value>
                <value>
                    <fullName>Added / Replaced Promotional Code</fullName>
                </value>
                <value>
                    <fullName>Affiliate Location Did Not Receive Authorization Form</fullName>
                </value>
                <value>
                    <fullName>Arrival Date Adjusted</fullName>
                </value>
                <value>
                    <fullName>Auto-Extender (Extended Order / Notified Customer)</fullName>
                </value>
                <value>
                    <fullName>Auto-Extender (Payment Declined / Attempting Collection)</fullName>
                </value>
                <value>
                    <fullName>Auto-Extension</fullName>
                </value>
                <value>
                    <fullName>Availability</fullName>
                </value>
                <value>
                    <fullName>Availability (Customer Wants to Purchase Non-Sale Item)</fullName>
                </value>
                <value>
                    <fullName>Bad Packaging / Box Integrity Compromised / Not Taped</fullName>
                </value>
                <value>
                    <fullName>BL Gear Quality Rating</fullName>
                </value>
                <value>
                    <fullName>Box Lost by Carrier</fullName>
                </value>
                <value>
                    <fullName>Box Returned to and Lost at Hotel / 3rd Party Location / Drop-box</fullName>
                </value>
                <value>
                    <fullName>Box Returned to Customer&apos;s Home</fullName>
                </value>
                <value>
                    <fullName>Call/Chat Transfer</fullName>
                </value>
                <value>
                    <fullName>Called Back and Left Message</fullName>
                </value>
                <value>
                    <fullName>Cancellation Dispute</fullName>
                </value>
                <value>
                    <fullName>Cancelled (Deposit)</fullName>
                </value>
                <value>
                    <fullName>Cancelled (Documents)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order (&lt;24hrs - Charged Fees)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order (&lt;24hrs - Waived Fees)</fullName>
                </value>
                <value>
                    <fullName>Cancel Order (&gt;24hrs - No Fees)</fullName>
                </value>
                <value>
                    <fullName>Cannot Retrive Password</fullName>
                </value>
                <value>
                    <fullName>Capturing Payment Before Ship Date (PCR)</fullName>
                </value>
                <value>
                    <fullName>Careers / Resumes</fullName>
                </value>
                <value>
                    <fullName>Compatibility</fullName>
                </value>
                <value>
                    <fullName>Contact Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked to True if the customer should not receive survey.</description>
        <inlineHelpText>Should be checked to True if the customer should not receive survey.</inlineHelpText>
        <label>Survey Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Mins_From_Now_Demo__c</fullName>
        <formula>NOW() + ( ( (1/24)/60 ) * 1 )</formula>
        <label>5 Mins From Now ( Demo )</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Help_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Help (New)</label>
        <queue>Help</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Department__c</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Internal_Support</value>
        </filters>
        <label>Internal Cases (All)</label>
        <sharedTo>
            <roleAndSubordinates>Support_Executives</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>PO_Accounts_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>PO Accounts (New)</label>
        <queue>PO_Accounts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Photo_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Photo &amp; Photo VIP (New)</label>
        <queue>Photo</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Photo_Department_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Photo,Photo VIP</value>
        </filters>
        <label>Photo &amp; Photo VIP (All)</label>
        <sharedTo>
            <roleAndSubordinates>Photo_Supervisor</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Photo_VIP_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Photo VIP</value>
        </filters>
        <label>X. Photo VIP (All)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <listViews>
        <fullName>Recovery_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Recovery</value>
        </filters>
        <label>Recovery (All)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recovery_New</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Recovery (New)</label>
        <queue>Recovery</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Repair_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Repair</value>
        </filters>
        <label>Repair (All)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Repair_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Repair (New)</label>
        <queue>Repair</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Verification_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Milestone_Violation_Warning__c</columns>
        <columns>Milestone_Violation_Warning_Time__c</columns>
        <columns>Resolution_Violation_Warning__c</columns>
        <columns>Resolution_Violation_Warning_Time__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Verification (New)</label>
        <queue>Verification</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer_Support</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <description>This holds all queries and requests related to Customers.</description>
        <label>Customer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Support</fullName>
        <active>true</active>
        <businessProcess>Internal Support</businessProcess>
        <description>This holds all internal department queries and requests.</description>
        <label>Internal Support</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Complete_First_Milestone</fullName>
        <active>true</active>
        <description>Prevent Changing Case Status to Waiting on Customer or Waiting on Someone else if First Response Milestone is not Marked Done.</description>
        <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status,&apos;Waiting on Customer&apos;),
ISPICKVAL(Status,&apos;Waiting on someone else&apos;)),
First_Response__c = False,
NOT(ISBLANK(EntitlementId)) 
)</errorConditionFormula>
        <errorMessage>Please complete the First Response Milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ownership_of_case</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Status ) &amp;&amp; BEGINS( OwnerId , &quot;00G&quot; )</errorConditionFormula>
        <errorMessage>Please accept Ownership of case before you proceed</errorMessage>
    </validationRules>
</CustomObject>